@@ -1,13 +1,6 @@
-
-    
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
-    }
+plugins {
+    id 'application'
+    id 'org.beryx.jlink' version '2.3.1'
 }
 
 sourceCompatibility = '1.9'
@@ -19,47 +12,26 @@ repositories {
         url 'https://oss.sonatype.org/content/repositories/snapshots/'
     }
 }
-import org.gradle.api.artifacts.*
-apply plugin: 'application'
-apply plugin: 'com.github.johnrengelman.shadow'
-
-//uncomment next line for NativePackages..
-//apply from: 'javafx.plugin'
-
 
 applicationName = 'FXyz-Samples'
-mainClassName = fxyz_sampler_mainClass
+mainClassName = "${moduleName}/${fxyz_sampler_mainClass}"
 ext.mainClass = mainClassName
 applicationDefaultJvmArgs = ["-XX:+UseConcMarkSweepGC"]
 
 dependencies {
-    compile "org.openjfx:javafx-base:11:$platform"
-    compile "org.openjfx:javafx-controls:11:$platform"
-    compile "org.openjfx:javafx-graphics:11:$platform"
-    compile "org.openjfx:javafx-fxml:11:$platform"
-    compile "org.openjfx:javafx-swing:11:$platform"
-      
-    compile "org.openjfx:javafx-graphics:11:win"
-    compile "org.openjfx:javafx-graphics:11:linux"
-    compile "org.openjfx:javafx-graphics:11:mac"
-        
-    compile project(':FXyz-Client')
-    compile project(':FXyz-Core')
-    compile project(':FXyz-Importers')
-    compile ('org.reactfx:reactfx:2.0-M5')
-    compile ('org.fxmisc.easybind:easybind:1.0.4-SNAPSHOT')
-    if (JavaVersion.current().isJava9Compatible()) {
-        compile ('org.jfxtras:jfxtras-controls:9.0-r1')
-    } else {
-        compile ('org.jfxtras:jfxtras-controls:8.0-r6')
-    }
+    implementation project(':FXyz-Client')
+    implementation project(':FXyz-Core')
+    implementation project(':FXyz-Importers')
+    implementation 'org.controlsfx:controlsfx:9.0.0'
+    implementation ('org.reactfx:reactfx:2.0-M5')
+    implementation ('org.fxmisc.easybind:easybind:1.0.4-SNAPSHOT')
+    implementation ('org.jfxtras:jfxtras-controls:9.0-r1')
 }
 
 compileJava {
     doFirst {
         options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml,javafx.swing'
+                '--add-exports', 'javafx.graphics/com.sun.javafx.scene=org.fxyz3d.FXyz.Samples'
         ]
     }
     options.encoding = "UTF-8"
@@ -67,11 +39,8 @@ compileJava {
 
 run {
     doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml,javafx.swing',
-                '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED'
-        ]
+        jvmArgs = ['--add-exports', 'javafx.base/com.sun.javafx.runtime=controlsfx', 
+                   '--add-exports', 'javafx.graphics/com.sun.javafx.scene=org.fxyz3d.FXyz.Samples']
     }
 }
 
@@ -86,4 +55,13 @@ jar {
     from sourceSets.main.allJava
 }
 
-shadow{}
+jlink {
+    imageName = 'FXyz'
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    addExtraDependencies("javafx")
+    launcher {
+        name = 'FXyzSamples'
+        jvmArgs = ['--add-exports', 'javafx.base/com.sun.javafx.runtime=org.fxyz3d.merged.module', 
+                   '--add-exports', 'javafx.graphics/com.sun.javafx.scene=org.fxyz3d.FXyz.Samples']
+    }
+}
